[gd_scene load_steps=3 format=3 uid="uid://d14gx25p8s3cb"]

[ext_resource type="Script" uid="uid://cfe4pxjo4wtnv" path="res://script_game_level.gd" id="1_df5pp"]
[ext_resource type="Texture2D" uid="uid://jtlyadvbp034" path="res://i (1).png" id="2_ibsu8"]

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_df5pp")

[node name="TextureRect" type="TextureRect" parent="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ibsu8")

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 460.0
offset_bottom = -260.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
custom_minimum_size = Vector2(1000, 200)
layout_mode = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_override_constants/separation = 105
alignment = 1

[node name="Level 1" type="Button" parent="Control/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Level 2" type="Button" parent="Control/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Level 3" type="Button" parent="Control/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Level 4" type="Button" parent="Control/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Level 5" type="Button" parent="Control/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="CenterContainer2" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 200.0
offset_bottom = -519.9999
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer2"]
custom_minimum_size = Vector2(1000, 200)
layout_mode = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer2/VBoxContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_override_constants/separation = 105
alignment = 1

[node name="Level1" type="Button" parent="Control/CenterContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Level 2" type="Button" parent="Control/CenterContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Level 3" type="Button" parent="Control/CenterContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Level 4" type="Button" parent="Control/CenterContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Level 5" type="Button" parent="Control/CenterContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="CenterContainer3" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 720.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer3"]
custom_minimum_size = Vector2(1000, 200)
layout_mode = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer3/VBoxContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_override_constants/separation = 105
alignment = 1

[node name="Level 1" type="Button" parent="Control/CenterContainer3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Level 2" type="Button" parent="Control/CenterContainer3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Level 3" type="Button" parent="Control/CenterContainer3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Level 4" type="Button" parent="Control/CenterContainer3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Level 5" type="Button" parent="Control/CenterContainer3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="CenterContainer4" type="CenterContainer" parent="Control"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 200.0

[node name="Label" type="Label" parent="Control/CenterContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 136
text = "ВЫБОР УРОВНЕЙ"

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.031000001
anchor_top = 0.019000001
anchor_right = 0.5
anchor_bottom = 0.20500001
offset_left = 0.47999573
offset_top = 0.47999954
offset_right = 900.0
offset_bottom = -0.40000916

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(184.56, 0.155)
layout_mode = 2

[node name="back_butt" type="Button" parent="Control/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0.22, 108.64)
layout_mode = 2
