extends Control

var level_containers = []
var back_button
var selected_level: int = 0
var level_button_scene = preload("res://UI/LevelButton.tscn")

func _ready():
	print("=== LEVEL SELECTION ===")
	await get_tree().process_frame
	find_nodes()
	create_level_buttons()
	update_layout()

func find_nodes():
	# –ò—â–µ–º –∫–æ–Ω—Ç–µ–π–Ω–µ—Ä—ã —É—Ä–æ–≤–Ω–µ–π
	var container_paths = [
		"CenterContainer/VBoxContainer/HBoxContainer",
		"CenterContainer2/VBoxContainer/HBoxContainer", 
		"CenterContainer3/VBoxContainer/HBoxContainer"
	]
	
	for path in container_paths:
		var container = get_node_or_null(path)
		if container:
			level_containers.append(container)
			print("‚úÖ –ö–æ–Ω—Ç–µ–π–Ω–µ—Ä: ", path)
	
	# –ò–°–ü–†–ê–í–õ–ï–ù –ü–£–¢–¨ –ö –ö–ù–û–ü–ö–ï –ù–ê–ó–ê–î
	back_button = get_node_or_null("HBoxContainer/VBoxContainer/back_butt")
	if back_button:
		back_button.pressed.connect(_on_back_pressed)
		print("‚úÖ –ö–Ω–æ–ø–∫–∞ –Ω–∞–∑–∞–¥ –Ω–∞–π–¥–µ–Ω–∞ –≤ —Å—Ü–µ–Ω–µ")
	else:
		print("‚ùå –ö–Ω–æ–ø–∫–∞ –Ω–∞–∑–∞–¥ –Ω–µ –Ω–∞–π–¥–µ–Ω–∞ –ø–æ –ø—É—Ç–∏: HBoxContainer/VBoxContainer/back_butt")
		# –ü–æ–ø—Ä–æ–±—É–µ–º –Ω–∞–π—Ç–∏ –∫–Ω–æ–ø–∫—É –¥—Ä—É–≥–∏–º —Å–ø–æ—Å–æ–±–æ–º
		find_back_button_alternative()

func find_back_button_alternative():
	# –ü—Ä–æ–±—É–µ–º –Ω–∞–π—Ç–∏ –∫–Ω–æ–ø–∫—É –ø–æ –∏–º–µ–Ω–∏
	back_button = find_child("back_butt", true, false)
	if back_button:
		back_button.pressed.connect(_on_back_pressed)
		print("‚úÖ –ö–Ω–æ–ø–∫–∞ –Ω–∞–∑–∞–¥ –Ω–∞–π–¥–µ–Ω–∞ –∞–ª—å—Ç–µ—Ä–Ω–∞—Ç–∏–≤–Ω—ã–º —Å–ø–æ—Å–æ–±–æ–º")
	else:
		print("‚ùå –ö–Ω–æ–ø–∫–∞ –Ω–∞–∑–∞–¥ –Ω–µ –Ω–∞–π–¥–µ–Ω–∞ –≤–æ–æ–±—â–µ! –°–æ–∑–¥–∞–µ–º –≤—Ä–µ–º–µ–Ω–Ω—É—é")
		create_fallback_back_button()

func create_fallback_back_button():
	back_button = Button.new()
	back_button.text = "–ù–ê–ó–ê–î"
	back_button.custom_minimum_size = Vector2(100, 50)
	back_button.position = Vector2(20, 20)
	back_button.pressed.connect(_on_back_pressed)
	add_child(back_button)
	print("‚úÖ –°–æ–∑–¥–∞–Ω–∞ –≤—Ä–µ–º–µ–Ω–Ω–∞—è –∫–Ω–æ–ø–∫–∞ –Ω–∞–∑–∞–¥")

func create_level_buttons():
	for container in level_containers:
		for child in container.get_children():
			if child is Button or child.has_method("set_level_number"):
				child.queue_free()
	
	for level in range(1, 16):
		var button = level_button_scene.instantiate()
		button.set_level_number(level)
		button.pressed.connect(_on_level_pressed.bind(level))
		
		if Global:
			var level_data = Global.get_level_data(level)
			button.set_level_data(level_data)
		
		var container_index = floor((level - 1) / 5.0)
		if container_index < level_containers.size():
			level_containers[container_index].add_child(button)

func update_layout():
	for container in level_containers:
		if container:
			container.queue_redraw()

func _on_level_pressed(level_number: int):
	print("üéØ –í—ã–±—Ä–∞–Ω —É—Ä–æ–≤–µ–Ω—å: ", level_number)
	selected_level = level_number
	
	var timer = Timer.new()
	add_child(timer)
	timer.timeout.connect(_load_level)
	timer.one_shot = true
	timer.start(0.1)

func _load_level():
	if Global:
		Global.current_level = selected_level
	
	var level_path = "res://DroneLevels/Levels/Level%d.tscn" % selected_level
	if not FileAccess.file_exists(level_path):
		level_path = "res://DroneLevels/DroneScene.tscn"
	
	# –î–ª—è –∏–≥—Ä–æ–≤—ã—Ö —É—Ä–æ–≤–Ω–µ–π –∏—Å–ø–æ–ª—å–∑—É–µ–º —ç–∫—Ä–∞–Ω –∑–∞–≥—Ä—É–∑–∫–∏
	Global.load_scene_with_loading(level_path)

func _on_back_pressed():
	# –í–æ–∑–≤—Ä–∞—Ç –≤ –≥–ª–∞–≤–Ω–æ–µ –º–µ–Ω—é –ë–ï–ó —ç–∫—Ä–∞–Ω–∞ –∑–∞–≥—Ä—É–∑–∫–∏
	print("üîô –ù–∞–∑–∞–¥ –≤ –º–µ–Ω—é")
	get_tree().change_scene_to_file("res://main_scene.tscn")
